Put long string values onto a single line (issues with line endings).

--- a/optimizely.routing.yml
+++ b/optimizely.routing.yml
@@ -1,9 +1,7 @@
 optimizely.listing:
   path: /admin/config/system/optimizely
   defaults: 
-    _content: >
-      \Drupal\optimizely\Controller
-      \OptimizelyController::helloListing
+    _content: \Drupal\optimizely\Controller\OptimizelyController::helloListing
     _title: Optimizely
   requirements:
     _permission: administer optimizely
@@ -11,9 +9,7 @@ optimizely.listing:
 optimizely.add_update:
   path: /admin/config/system/optimizely/add_update
   defaults: 
-    _content: >
-      \Drupal\optimizely\Controller
-      \OptimizelyController::helloAddProject
+    _content: \Drupal\optimizely\Controller\OptimizelyController::helloAddProject
     _title: Optimizely
   requirements:
     _permission: administer optimizely
@@ -21,9 +17,7 @@ optimizely.add_update:
 optimizely.acct_info:
   path: /admin/config/system/optimizely/settings
   defaults: 
-    _content: >
-      \Drupal\optimizely\Controller
-      \OptimizelyController::helloAcctInfo
+    _content: \Drupal\optimizely\Controller\OptimizelyController::helloAcctInfo
     _title: Optimizely
   requirements:
     _permission: administer optimizely
