--- a/optimizely.local_tasks.yml
+++ b/optimizely.local_tasks.yml
@@ -10,8 +10,8 @@ optimizely.add_project_tab:
   base_route: optimizely.listing
   weight: 1
 
-optimizely.acct_info_tab:
-  route_name: optimizely.acct_info
+optimizely.settings_tab:
+  route_name: optimizely.settings
   title: 'ACCOUNT INFO'
   base_route: optimizely.listing
   weight: 2
