--- a/optimizely.info.yml
+++ b/optimizely.info.yml
@@ -13,7 +13,7 @@ description: >
 package: A/B Testing
 php: 5.4
 project: optimizely
-version: 8.x-2.14-beta3
+version: 8.x-2.15-alpha15
 
 # The configure property specifies a route name, 
 # which is defined in the .routing.yml file.
