Issue 2821560: Use subdirectories for source code files. Start 8.x-3.x branch.

--- a/optimizely.routing.yml
+++ b/optimizely.routing.yml
@@ -1,7 +1,7 @@
 optimizely.listing:
   path: /admin/config/system/optimizely
   defaults:
-    _form: \Drupal\optimizely\ProjectListForm
+    _form: \Drupal\optimizely\Form\ProjectListForm
     _title: Optimizely
   requirements:
     _permission: administer optimizely
@@ -9,7 +9,7 @@ optimizely.listing:
 optimizely.add_update:
   path: /admin/config/system/optimizely/add_update
   defaults:
-    _form: \Drupal\optimizely\AddUpdateForm
+    _form: \Drupal\optimizely\Form\AddUpdateForm
     _title: Optimizely
   requirements:
     _permission: administer optimizely
@@ -17,7 +17,7 @@ optimizely.add_update:
 optimizely.add_update.oid:
   path: /admin/config/system/optimizely/add_update/{oid}
   defaults:
-    _controller: \Drupal\optimizely\DoUpdate::buildUpdateForm
+    _controller: \Drupal\optimizely\Controller\DoUpdate::buildUpdateForm
     _title: Optimizely Edit Project
   requirements:
     _permission: administer optimizely
@@ -25,7 +25,7 @@ optimizely.add_update.oid:
 optimizely.delete.oid:
   path: /admin/config/system/optimizely/delete/{oid}
   defaults:
-    _form: \Drupal\optimizely\DeleteForm
+    _form: \Drupal\optimizely\Form\DeleteForm
     _title: Optimizely Delete Project
   requirements:
     _permission: administer optimizely
@@ -33,7 +33,7 @@ optimizely.delete.oid:
 optimizely.settings:
   path: /admin/config/system/optimizely/settings
   defaults:
-    _form: \Drupal\optimizely\AccountSettingsForm
+    _form: \Drupal\optimizely\Form\AccountSettingsForm
     _title: Optimizely
   requirements:
     _permission: administer optimizely
@@ -41,7 +41,7 @@ optimizely.settings:
 ajax.enable:
   path: /ajax/optimizely
   defaults:
-    _controller: \Drupal\optimizely\AjaxEnable::enableDisable
+    _controller: \Drupal\optimizely\Controller\AjaxEnable::enableDisable
     _title: Optimizely Administer AJAX
   requirements:
     _permission: administer optimizely
